--- a/src/assets/stylus/base.styl
+++ b/src/assets/stylus/base.styl
@@ -4,3 +4,29 @@ body, html
   overflow -moz-scrollbars-none
   ::-webkit-scrollbar
     display none
+.small-btn
+  line-height 16px
+  border 1px solid #40B6FF
+  border-radius 3px
+  color #40B6FF
+  padding-left 6px
+  padding-right 6px
+  font-size 12px
+  cursor pointer
+  transition all 0.5s
+  &:hover
+    border 1px dashed #40B6FF
+    color red
+.btn
+  display inline-block
+  border-radius 4px
+  text-align center
+  font-size 14px
+  min-width 90px
+  line-height 36px
+  height 36px
+  background #40B6FF
+  color #ffffff
+  &:hover
+    opacity 0.8
+    cursor pointer
