--- a/src/assets/stylus/base.styl
+++ b/src/assets/stylus/base.styl
@@ -4,6 +4,10 @@ body, html
   overflow -moz-scrollbars-none
   ::-webkit-scrollbar
     display none
+.pager
+  text-align right
+  padding 30px 0
+// 按钮组
 .small-btn
   line-height 16px
   border 1px solid #40B6FF
@@ -13,10 +17,24 @@ body, html
   padding-right 6px
   font-size 12px
   cursor pointer
-  transition all 0.5s
+  transition all 0.3s
   &:hover
-    border 1px dashed #40B6FF
-    color red
+    border 1px dashed #ff3341
+    color #ff3341
+.radius-btn
+  display inline-block
+  padding-left 16px
+  padding-right 16px
+  height 28px
+  line-height 28px
+  font-size 12px
+  border-radius 14px
+  background #40B6FF
+  color #ffffff
+  box-shadow 0 2px 6px rgba(64, 182, 255, 0.63)
+  &:hover
+    cursor pointer
+    opacity 0.8
 .btn
   display inline-block
   border-radius 4px
@@ -30,3 +48,17 @@ body, html
   &:hover
     opacity 0.8
     cursor pointer
+// 提示状态组
+.tipSuccess
+  display inline-block
+  padding-left 16px
+  padding-right 16px
+  padding-top 5px
+  padding-bottom 5px
+  border-radius 4px
+  line-height 1
+  min-width 40px
+  border 1px solid #3377FF
+  color #3377FF
+  font-size 14px
+  background rgba(163, 211, 246, 0.4)
