--- a/src/assets/stylus/eleFix.styl
+++ b/src/assets/stylus/eleFix.styl
@@ -1,3 +1,15 @@
+.el-table th
+  background-color #EFF2F6
+  font-size 12px
+  color #525F75
+  .cell
+    font-weight bold
+.el-table td
+  border-bottom none
+.border.el-table td
+  box-shadow 0 -1px 0 #E0E6ED
+.el-dialog__header
+  box-shadow 0 1px 0 #E8E8ED
 .index
   .sendDetail
     .title
