--- a/src/assets/stylus/y_style.styl
+++ b/src/assets/stylus/y_style.styl
@@ -11,3 +11,22 @@
   width 245px
 .market .el-input
   width 175px
+.market .page .el-input
+  width 100px
+.sendType .el-input
+  width 220px
+  margin-left 30px
+.centerBtn
+  border 1px solid #CCCCCC
+  font-size 14px
+  color #000000
+  padding-top 3px
+  padding-bottom 3px
+  padding-left 16px
+  padding-right 16px
+  border-radius 4px
+  background white
+  outline none
+  width 96px
+  height 36px
+  cursor pointer
