--- a/src/assets/stylus/base.styl
+++ b/src/assets/stylus/base.styl
@@ -4,6 +4,9 @@ body, html
   overflow -moz-scrollbars-none
   ::-webkit-scrollbar
     display none
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
+  -webkit-appearance none
+  margin 0
 .pager
   text-align right
   padding 30px 0
