--- a/src/assets/stylus/base.styl
+++ b/src/assets/stylus/base.styl
@@ -1,5 +1,6 @@
 body, html
   height 100%
+  font-family 'PingFangSC', 'STHeitiSC-Light', 'Helvetica-Light', arial, sans-serif, 'Droid Sans Fallback'
   -ms-overflow-style none
   overflow -moz-scrollbars-none
   ::-webkit-scrollbar
@@ -51,6 +52,24 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
   &:hover
     opacity 0.8
     cursor pointer
+.btn-b
+  display inline-block
+  border-radius 4px
+  border 1px solid #BAC6DC
+  text-align center
+  font-size 14px
+  min-width 90px
+  line-height 34px
+  height 34px
+  color #525F75
+  &:hover
+    opacity 0.8
+    color #40B6FF
+    cursor pointer
+// icon组
+.qiye
+  background url('../images/qiye.png') no-repeat
+  background-size 100% 100%
 // 提示状态组
 .tipSuccess
   display inline-block
