--- a/src/assets/stylus/eleFix.styl
+++ b/src/assets/stylus/eleFix.styl
@@ -20,3 +20,11 @@
         border-radius 4px
       .el-input__icon
         color #40B6FF
+.tooltipItem
+  max-width 400px
+.tooltipOverflow
+  display inline-block
+  width 128px
+  overflow hidden
+  text-overflow ellipsis
+  white-space nowrap
