--- a/src/assets/stylus/eleFix.styl
+++ b/src/assets/stylus/eleFix.styl
@@ -1,3 +1,13 @@
+.el-radio__input.is-checked+.el-radio__label
+  color #40b6ff
+.el-checkbox__input.is-checked+.el-checkbox__label
+  color #40b6ff
+.el-radio__input.is-checked .el-radio__inner
+  background-color #40b6ff
+  border-color #40b6ff
+.el-checkbox__input.is-checked .el-checkbox__inner, .el-checkbox__input.is-indeterminate .el-checkbox__inner
+  background-color #40b6ff
+  border-color #40b6ff
 .el-table th
   background-color #EFF2F6
   font-size 12px
