--- a/src/assets/stylus/y_style.styl
+++ b/src/assets/stylus/y_style.styl
@@ -13,9 +13,18 @@
   width 175px
 .market .page .el-input
   width 100px
+.market .el-pagination__editor.el-input
+  width 50px
 .sendType .el-input
   width 220px
   margin-left 30px
+.picSend .el-textarea
+  font-size 8px
+.picSend .el-textarea__inner
+  padding 2px 2px
+.market .el-button--primary
+  background #40B6FF
+  border 1px solid #40B6FF
 .centerBtn
   border 1px solid #CCCCCC
   font-size 14px
@@ -29,4 +38,32 @@
   outline none
   width 96px
   height 36px
+  cursor pointer
+.BtnDisable
+  border 1px solid #CCCCCC
+  font-size 14px
+  color #ffffff
+  padding-top 3px
+  padding-bottom 3px
+  padding-left 3px
+  padding-right 3px
+  border-radius 4px
+  background #40B6FF
+  outline none
+  width 96px
+  height 36px
+  cursor pointer
+  font-size 14px
+.coinpay
+  border 1px solid #40B6FF
+  font-size 8px
+  color #40B6FF
+  padding 1px
+  padding-left 6px
+  padding-right 6px
+  border-radius 4px
+  background white
+  outline none
+  width 40px
+  height 10px
   cursor pointer
