--- a/src/assets/stylus/base.styl
+++ b/src/assets/stylus/base.styl
@@ -8,6 +8,10 @@ body, html
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
   -webkit-appearance none
   margin 0
+input::-webkit-input-placeholder
+  color #b4b4b4
+  :-moz-placeholder, ::-moz-placeholder, :-ms-input-placeholder, ::-webkit-input-placeholder
+    color #b4b4b4
 .pager
   text-align right
   padding 30px 0
