页面部分的优化

--- a/src/assets/stylus/y_style.styl
+++ b/src/assets/stylus/y_style.styl
@@ -25,6 +25,8 @@
 .market .el-button--primary
   background #40B6FF
   border 1px solid #40B6FF
+.marketEffectDetail .infoList .search li .el-icon-download[data-v-f662d2b6]
+  color #40B6FF
 .centerBtn
   border 1px solid #CCCCCC
   font-size 14px
@@ -67,3 +69,11 @@
   width 40px
   height 10px
   cursor pointer
+::-webkit-input-placeholder /* WebKit browsers */
+  color #BAC6DC !important
+:-moz-placeholder /* Mozilla Firefox 4 to 18 */
+  color #BAC6DC !important
+::-moz-placeholder /* Mozilla Firefox 19+ */
+  color #BAC6DC !important
+:-ms-input-placeholder /* Internet Explorer 10+ */
+  color #BAC6DC !important
