--- a/src/assets/stylus/base.styl
+++ b/src/assets/stylus/base.styl
@@ -88,3 +88,16 @@ input::-webkit-input-placeholder
   color #3377FF
   font-size 14px
   background rgba(163, 211, 246, 0.4)
+.tipError
+  display inline-block
+  padding-left 16px
+  padding-right 16px
+  padding-top 5px
+  padding-bottom 5px
+  border-radius 4px
+  line-height 1
+  min-width 40px
+  border 1px solid #FF2933
+  color #FF2933
+  font-size 14px
+  background rgba(255, 141, 148, 0.4)
