列表为空的判断,部分判断的修改

--- a/src/assets/stylus/y_style.styl
+++ b/src/assets/stylus/y_style.styl
@@ -29,6 +29,8 @@
   border 1px solid #40B6FF
 .marketEffectDetail .infoList .search li .el-icon-download[data-v-f662d2b6]
   color #40B6FF
+.el-table__empty-block
+  display none
 .centerBtn
   border 1px solid #CCCCCC
   font-size 14px
